# cellbridge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
artifacts/knockout_experiment/normalized_percent_decrease_repro/: manifest.json  target_scores_t24.csv
conf/: flow_matching.yaml  sampling_marginal.yaml  sampling_velocity.yaml  sweep_align_multi_channel.yaml  sweep_align_multi_channel_ablation_metacell.yaml  sweep_align_multi_channel_ablation_random_lr.yaml  sweep_align_multi_channel_ablation_shuffle.yaml  sweep_align_multi_channel_unbalanced.yaml
conf/cci/: cci_from_adata_multi.yaml
conf/cci/transform/: hill.yaml
conf/cci_transform/: default.yaml
conf/cluster/: identity.yaml  leiden.yaml
conf/geopath/: land.yaml
conf/inputs/: cancer.yaml  embryo.yaml  immune.yaml  light.yaml
conf/model/: mlp.yaml
conf/rep/: pca.yaml
conf/trainer/: default.yaml
conf/trainer/callbacks/: default.yaml
conf/wandb/: default.yaml
notebooks/ablations/: cci_ablation.ipynb
notebooks/marginal_interpolation/: marginal_interpolation.ipynb
notebooks/synthetic_experiment/: figure_synthetic_experiment.ipynb
notebooks/velocity_pushforward/: results.ipynb
scripts/ablations/: ablations.sh
scripts/knockout_experiment/: reproduce_normalized_percent_decrease.sh  reproduce_plot.py
scripts/marginal_interpolation/cfm/: Dendritic Stimulus.sh  Embryo.sh  Lung Tumour.sh  V1 Light.sh
scripts/marginal_interpolation/uot/: Dendritic Stimulus.sh  Lung Tumour.sh  V1 Light.sh
scripts/velocity_pushforward/cfm/: run_parallel_cfm.sh
scripts/velocity_pushforward/mfm/: run_parallel_geopath.sh
src/cellbridge/cci/: construct.py  (+3 more)
(+37 files in other folders)
